--- a/main/client/themes/monnisgroup/submission_detail_content.html
+++ b/main/client/themes/monnisgroup/submission_detail_content.html
@@ -23,7 +23,7 @@
         <div class="monnisgroup-container monnisgroup-font">
             <div>
                 <h4 class="pull-left">Үнэ цэнийг цогцлооно</h4>
-                <img class="img pull-right monnis_logo" src="http://www.monnis.com/images/logo.png">
+                <img class="img pull-right monnis_logo" src="http://monnis.com/static/sites/monnis/default/images/logo.png">
             </div>
             <div class="clearfix"></div>
             <div class="row">
@@ -52,7 +52,7 @@
                                     <span>Нээлттэй байгаа ажлын байранд:</span>
                                     {{nPosition}}
                                 </td>
-                                <td class="colInput">
+                                <td class="colInput" style="min-width: 150px;">
                                     <span>Эсвэл өөр ажлын байранд:</span>
                                     {{nAnotherPosition}}
                                 </td>                                
