--- a/main/client/themes/monnisgroup/submission_detail_content.html
+++ b/main/client/themes/monnisgroup/submission_detail_content.html
@@ -164,8 +164,8 @@
                             {{ #each nEducation }}
                             <tr>
                                 <td>{{ education1 }}</td>
-                                <td>{{ education2 }}</td>
-                                <td>{{ education3 }}</td>
+                                <td class="date">{{ education2 }}</td>
+                                <td class="date">{{ education3 }}</td>
                                 <td>{{ education4 }}</td>
                                 <td>{{ education5 }}</td>
                                 <td>{{ education6 }}</td>
