--- a/main/client/themes/monnisgroup/submission_detail_content.html
+++ b/main/client/themes/monnisgroup/submission_detail_content.html
@@ -76,7 +76,7 @@
                     <table class="table highlight bordered responsive-table monnistabledetail">
                        <tbody>
                             <tr>
-                                <td rowspan="5" style="width: 160px;">
+                                <td rowspan="6" style="width: 160px;">
                                 <span>Цээж зураг</span>
                                 <img style="width: 150px;" target="_blank" src="{{ nPortrait }}" class="img"/>
                                 </td>                              
@@ -109,7 +109,7 @@
                                 <td><span>Яаралтай үед холбогдох утас:</span>{{ nMobile2 }}</td>
                             </tr>
                             <tr>
-                                <td colspan="2"> <span>Гэрийн хаяг, утас:</span>{{ nAddress }}</td>
+                                <td> <span>Гэрийн хаяг, утас:</span>{{ nAddress }}</td>
                                 <td><span>Гэрлэсэн эсэх:</span>{{ nMarried }}</td>
                             </tr>
                        
@@ -155,9 +155,9 @@
                                 <th>Хаана, ямар сургууль</th>
                                 <th>Элссэн огноо</th>
                                 <th>Төгссөн огноо</th>
-                                <th>Эзэмшсэн мэргэжил</th>
-                                <th>Дипломын дугаар</th>
-                                <th>Голч дүн</th>
+                                <th>Мэргэжил</th>
+                                <th>Дипломын №</th>
+                                <th>Голч</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -187,7 +187,7 @@
                                 <th>Хаана</th>
                                 <th>Хэзээ</th>
                                 <th>Үргэлжилсэн хугацаа</th>
-                                <th>Гэрчилгээний дугаар</th>
+                                <th>Гэрчилгээний №</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -214,9 +214,9 @@
                             <tr>
                                 <th>Гадаад хэлний нэр</th>
                                 <th>Үзсэн хугацаа</th>
-                                <th>Ярьсныг ойлгох</th>
-                                <th>Өөрөө ярих</th>
-                                <th>Уншиж ойлгох</th>
+                                <th>Ойлгох</th>
+                                <th>Ярих</th>
+                                <th>Унших</th>
                                 <th>Бичиж орчуулах</th>
                             </tr>
                         </thead>
@@ -289,12 +289,12 @@
                     <table class="table highlight bordered responsive-table monnistabledetail1">
                         <thead class="bold">
                             <tr>
-                                <th>Байгууллагын нэр</th>
+                                <th>Байгууллага</th>
                                 <th>Албан тушаал</th>
-                                <th>Ажилд орсон огноо</th>
-                                <th>Ажлаас гарсан огноо</th>
+                                <th>Орсон огноо</th>
+                                <th>Гарсан огноо</th>
                                 <th>Удирдлагын нэр</th>
-                                <th>Удирдлагын утас</th>
+                                <th>У/утас</th>
                             </tr>
                         </thead>
                         <tbody>
