--- a/main/client/themes/monnisgroup/submission_detail_content.html
+++ b/main/client/themes/monnisgroup/submission_detail_content.html
@@ -271,7 +271,7 @@
                                     {{ nHobbi }}
                                 </td>
                                 <td class="colInput">
-                                    <span>Гавъяа шагнал:</span>
+                                    <span>Шагнал:</span>
                                     {{ nAwards }}
                                 </td>
                             </tr>
