--- a/main/client/themes/bbtvmongolia/submission_list_content.html
+++ b/main/client/themes/bbtvmongolia/submission_list_content.html
@@ -10,7 +10,7 @@
                     <tr>
                         <th>Бөглөсөн огноо</th>
                         <th>Ажлын байр</th>
-                        <th>Овог, нэр</th>
+                        <th>Өөрийн нэр</th>
                         <th>И-мэйл</th>
                         <th>Харах</th>
                         <th>Устгах</th>
