--- a/main/client/themes/bbtvmongolia/submission_detail_content.html
+++ b/main/client/themes/bbtvmongolia/submission_detail_content.html
@@ -3,7 +3,7 @@
     <div class="row">
         <!-- Fixed navbar -->
         <nav class="navbar navbar-default navbar-fixed-top bbtvmongolia-navbar">
-            <div id="bbtvmongoliaContainer" class="container bbtvmongolia-font">
+            <div id="bbtvmongoliaContainer" class="container bbtvmongolia-font" style="margin-left: 5px;padding: 0;">
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-left">
 
@@ -250,7 +250,7 @@
             </div>
             <div id="uploads" class="panel panel-default bbtvmongolia-panel">
                 <div class="panel bbtvmongolia-panel-header">
-                    <p class="bbtvmongolia-panel-title">11. ХАВСАРГАХ ФАЙЛУУД </p>
+                    <p class="bbtvmongolia-panel-title">8. ХАВСАРГАХ ФАЙЛУУД </p>
                 </div>
                 <div class="panel panel-body">
                     <table class="table highlight bordered responsive-table bbtvtabledetail1">
@@ -258,6 +258,10 @@
                             <tr>
                                 <td>Иргэний үнэмлэхний хуулбар</td>
                                 <td><a target="_blank" href="{{ passport }}">{{ passport }}</a></td>
+                            </tr>
+                            <tr>
+                                <td>Хийж байсан бүтээл, судалгааны ажил</td>
+                                <td><a target="_blank" href="{{ research }}">{{ research }}</a></td>
                             </tr>
                         </tbody>
                          
