--- a/main/client/themes/bbtvmongolia/submission_detail_content.html
+++ b/main/client/themes/bbtvmongolia/submission_detail_content.html
@@ -23,8 +23,12 @@
         <div class="bbtvmongolia-container bbtvmongolia-font">
           
             <div class="clearfix"></div>
-            <h2 align="left" class="anket_title">АЖИЛД ОРОХЫГ ХҮСЭГЧИЙН АНКЕТ</h2>
-
+            <div class="col-sm-6 pull-left">
+                <h2 align="left" class="anket_title">АЖИЛД ОРОХЫГ ХҮСЭГЧИЙН АНКЕТ</h2>
+            </div>
+            <div class="col-sm-6 pull-right">
+                <img class="pull-right bbtv_logo" src="https://cdn-images-1.medium.com/max/1402/1*L1pCOYDWUp35jZbXiZGsWw.png">
+            </div>
             <div class="clearfix"></div>
 
             <div id="job" class="panel panel-default bbtvmongolia-panel">
