bloomberg nemelt zaswar

--- a/main/client/themes/bbtvmongolia/submission_list_content.html
+++ b/main/client/themes/bbtvmongolia/submission_list_content.html
@@ -5,7 +5,7 @@
     <br>
     {{# if state$isReady }}
         <div>
-            <table class="table highlight bordered responsive-table">
+            <table class="table highlight bordered responsive-table senders_list">
                 <thead>                
                     <tr>
                         <th>Бөглөсөн огноо</th>
