bloomberg nemelt zaswar

--- a/main/client/themes/bbtvmongolia/submission_detail_content.html
+++ b/main/client/themes/bbtvmongolia/submission_detail_content.html
@@ -90,13 +90,16 @@
                                 <td><span>Төрсөн аймаг, хот, сум, дүүрэг:</span>{{ birthPlace }}</td>
                             </tr>
                             <tr>
-                                <td> <span>Оршин суугаа хаяг:</span>{{ address }}</td>
+                                <td colspan="2">
+                                    <span>Оршин суугаа хаяг:</span>
+                                    {{ address }}
+                                </td>
                             </tr>
                             <tr>                                
-                            <td>
-                                <span>Гэр бүлийн байдал:</span>
-                                {{ familyName }}
-                            </td>           
+                                <td colspan="2">
+                                    <span>Гэр бүлийн байдал:</span>
+                                    {{ familyName }}
+                                </td>           
                             </tr>
                        
                         </tbody>
@@ -134,7 +137,7 @@
             </div>
             <div id="language" class="panel panel-warning bbtvmongolia-panel">
                 <div class="panel bbtvmongolia-panel-header">
-                    <p class="bbtvmongolia-panel-title">4. ГАДААД ХЭЛНИЙ МЭДЛЭГ</p>
+                    <p class="bbtvmongolia-panel-title">3. ГАДААД ХЭЛНИЙ МЭДЛЭГ</p>
                 </div>
                 <div class="panel panel-body">
                     <table class="table highlight bordered responsive-table bbtvtabledetail1">
@@ -161,7 +164,7 @@
             </div>
             <div id="employment" class="panel panel-primary bbtvmongolia-panel">
                 <div class="panel bbtvmongolia-panel-header">
-                    <p class="bbtvmongolia-panel-title">5. Ажлын туршлага:</p>
+                    <p class="bbtvmongolia-panel-title">4. Ажлын туршлага:</p>
                 </div>
                 <div class="panel panel-body">
                     <table class="table highlight bordered responsive-table bbtvtabledetail1">
@@ -188,7 +191,7 @@
             </div>
             <div id="certification" class="panel panel-warning bbtvmongolia-panel">
                 <div class="panel bbtvmongolia-panel-header">
-                    <p class="bbtvmongolia-panel-title">6. Мэргэшсэн байдал, хамрагдаж байсан сургалт, дадлага:</p>
+                    <p class="bbtvmongolia-panel-title">5. Мэргэшсэн байдал, хамрагдаж байсан сургалт, дадлага:</p>
                 </div>
                 <div class="panel panel-body">
                     <table class="table highlight bordered responsive-table bbtvtabledetail1">
@@ -216,7 +219,7 @@
           
             <div id="other" class="panel panel-warning bbtvmongolia-panel">
                 <div class="panel bbtvmongolia-panel-header">
-                    <p class="bbtvmongolia-panel-title">7. БУСАД </p>
+                    <p class="bbtvmongolia-panel-title">6. БУСАД </p>
                 </div>
                 <div class="panel panel-body">
                     <table class="table highlight bordered responsive-table bbtvtabledetail">
@@ -259,7 +262,7 @@
             </div>
             <div id="uploads" class="panel panel-default bbtvmongolia-panel">
                 <div class="panel bbtvmongolia-panel-header">
-                    <p class="bbtvmongolia-panel-title">8. ХАВСАРГАХ ФАЙЛУУД </p>
+                    <p class="bbtvmongolia-panel-title">7. ХАВСАРГАХ ФАЙЛУУД </p>
                 </div>
                 <div class="panel panel-body">
                     <table class="table highlight bordered responsive-table bbtvtabledetail1">
