--- a/main/client/themes/bbtvmongolia/submission_detail_content.html
+++ b/main/client/themes/bbtvmongolia/submission_detail_content.html
@@ -275,6 +275,10 @@
                                 <td>Хийж байсан бүтээл, судалгааны ажил</td>
                                 <td><a target="_blank" href="{{ research }}">{{ research }}</a></td>
                             </tr>
+                            <tr>
+                                <td>Бүтээл, судалгааны ажлын линк </td>
+                                <td><a target="_blank" href="{{ researchLink }}">{{ researchLink }}</a></td>
+                            </tr>
                         </tbody>
                          
                     </table>
