--- a/main/client/themes/bbtvmongolia/submission_detail_content.html
+++ b/main/client/themes/bbtvmongolia/submission_detail_content.html
@@ -154,7 +154,7 @@
                             <tr class="center">
                                 <td>{{ language1 }}</td>
                                 <td>{{ language2 }}</td>
-                                <td>{{ language3 }}</td>
+                                <td>{{ language3 }} сар</td>
                                 <td>{{ languagePoint }}</td>
                             </tr>
                             {{ /each }}
@@ -181,7 +181,7 @@
                             <tr>
                                 <td>{{ employment1 }}</td>
                                 <td>{{ employment2 }}</td>
-                                <td>{{ employment3 }}</td>
+                                <td>{{ employment3 }} сар</td>
                                 <td>{{ reason }}</td>
                             </tr>
                             {{ /each }}
@@ -209,7 +209,7 @@
                                 <td>{{ certified1 }}</td>
                                 <td>{{ certified2 }}</td>
                                 <td>{{ formatDate certified3 }}</td>
-                                <td>{{ certified4 }}</td>
+                                <td>{{ certified4 }} сар</td>
                             </tr>
                             {{ /each }}
                         </tbody>
@@ -268,15 +268,15 @@
                     <table class="table highlight bordered responsive-table bbtvtabledetail1">
                         <tbody>
                             <tr>
-                                <td>Иргэний үнэмлэхний хуулбар</td>
+                                <td>1. Иргэний үнэмлэхний хуулбар</td>
                                 <td><a target="_blank" href="{{ passport }}">{{ passport }}</a></td>
                             </tr>
                             <tr>
-                                <td>Хийж байсан бүтээл, судалгааны ажил</td>
+                                <td>2. Хийж байсан бүтээл, судалгааны ажил</td>
                                 <td><a target="_blank" href="{{ research }}">{{ research }}</a></td>
                             </tr>
                             <tr>
-                                <td>Бүтээл, судалгааны ажлын линк </td>
+                                <td>3. Бүтээл, судалгааны ажлын линк </td>
                                 <td><a target="_blank" href="{{ researchLink }}">{{ researchLink }}</a></td>
                             </tr>
                         </tbody>
