--- a/main/client/themes/bsu/submission_detail_content.html
+++ b/main/client/themes/bsu/submission_detail_content.html
@@ -1,4 +1,4 @@
-<template name="bsuSDetCbsuAnket">
+<template name="bsuSDetCbsuApplication">
   {{# with state$object }}
     <div class="row">
       <!-- Fixed navbar -->
