--- a/main/client/themes/bsu/submission_list_content.html
+++ b/main/client/themes/bsu/submission_list_content.html
@@ -1,7 +1,7 @@
-<template name="bsuSLCbsuAnket">
+<template name="bsuSLCbsuApplication">
 
   <h3>{{ state$form.title }}</h3>
-  <h4 class="title">Ирсэн анкетууд:</h4>
+  <h4 class="title">Ирсэн элсэлтийн мэдээлэл:</h4>
   <br>
   {{# if state$isReady }}
     <div>
@@ -11,7 +11,7 @@
             <th>Бөглөсөн огноо</th>
             <th>Элсэн орох огноо</th>
             <th>Элсэн орох анги</th>
-            <th>Өөрийн нэр</th>
+            <th>Нэр</th>
             <th>Харах</th>
             <th>Устгах</th>
           </tr>
