--- a/main/client/themes/bsu/submission_delete_content.html
+++ b/main/client/themes/bsu/submission_delete_content.html
@@ -1,4 +1,4 @@
-<template name="bsuSDelCbsuAnket">
+<template name="bsuSDelCbsuApplication">
   <h3>{{ state$object.title }}</h3>
 
   <form id="submissionDeleteForm">
